End more crucial bug, normally working

--- a/src/i18n/trad/en.json
+++ b/src/i18n/trad/en.json
@@ -58,6 +58,7 @@
 	"Clase":"Class",
 	"Fuente":"Source",
 	"Controles":"Controls",
+	"Bucle":"Loop",
 	"Sí":"Yes",
 	"Orden":"Order",
 	"Desborde":"Overflow",
@@ -128,5 +129,35 @@
 	"Ninguno":"None",
 	"Del final de la animación":"Of the end of animation",
 	"Del principio de la animación":"Of the begin of animation",
-	"Ambos":"Both"
+	"Ambos":"Both",
+	"Los datos se han guardado correctamente.":"Data Saved Correctly.",
+	"No se ha seleccionado ningún elemento para crear el fotograma clave.":"No element has be selected to create a keyframe",
+	"No se ha seleccionado ningún fotograma clave para su eliminación.":"No keyframe has be selected for deleted",
+	"Información":"Information",
+	"Modificar fotograma clave":"Modify Keyframe",
+	"Añadir fotograma clave":"Add Keyframe",
+	"¿Está seguro que desea borrar esta animación?":"Are you sure you wiish to delete this animation?",
+	"Atención":"Warning",
+	"Actualmente, no hay actualizaciones disponibles.":"Currently, its doesn't have any update available yet.",
+	"Se ha encontrado una versión más reciente disponible. ¿Desea descargarla?":"We found a new version. ¿Do yu want do download it?",
+	"El idioma se ha cambiado correctamente.":"The language changed had be saved.",
+	"No hay elemento que mostrar.":"No Elements to showed",
+	"Si borra este contenido multimedia, los objetos relacionados pueden dejar de funcionar. ¿Desea eliminar este contenido?":"If you delete this multimedia content, object relationship can be affected. Are you sure to delete it?",
+	"Elija una ruta de guardado":"Choose a save path",
+	"Archivos de guardado Blimp":"File Of Blimp",
+	"Elija un proyecto Blimp":"Select a Blimp project",
+	"Elija un Contenido":"Select a Content",
+	"Elija una imagen":"Select a Image",
+	"Elija un ":"Select a ",
+	"Añadir Código HTML personalizado":"Add Custom HTML Code",
+	"Ver Licencia":"See License",
+	"Editar Resolución de Trabajo":"Edit WorkFrame Resolution",
+	"Información sobre la animación":"Info Animation",
+	"Duración de la animación: ":"Animation Duration: ",
+	"Número de elementos: ":"Elements Numbers: ",
+	"Número de elementos animados: ":"Animated Elements Number: ",
+	"Fotogramas claves máximo: ":"Max of Keyframe in a Element: ",
+	"Elija una ruta de exportación":"Select a export path",
+	"Archivo de página Web":"Webpage File",
+	"Para cambiar de idioma, Blimp necesita reiniciarse, guarde todos los cambios. ¿Desea reiniciar ahora?":"For changed language, Blimp need to restart, save your changes before. Do you want to restart now?"
 }
